kubernetes/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: smart-healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: admin:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
