kubernetes/ai-symptom-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-symptom-service
  namespace: smart-healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-symptom-service
  template:
    metadata:
      labels:
        app: ai-symptom-service
    spec:
      containers:
        - name: ai-symptom-service
          image: ai-symptom-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5010
