kubernetes/doctor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-service
  namespace: smart-healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor-service
  template:
    metadata:
      labels:
        app: doctor-service
    spec:
      containers:
        - name: doctor-service
          image: doctor-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5003
