kubernetes/patient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
  namespace: smart-healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: patient-service:latest`n          imagePullPolicy: Never
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
