kubernetes/telemedicine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemedicine-service
  namespace: smart-healthcare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemedicine-service
  template:
    metadata:
      labels:
        app: telemedicine-service
    spec:
      containers:
        - name: telemedicine-service
          image: telemedicine-service:latest`n          imagePullPolicy: Never
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5007
