kubernetes/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-client
  namespace: smart-healthcare
spec:
  type: NodePort
  selector:
    app: admin-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
