kubernetes/ai-symptom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-symptom-service
  namespace: smart-healthcare
spec:
  selector:
    app: ai-symptom-service
  ports:
    - protocol: TCP
      port: 5010
      targetPort: 5010
      nodePort: 30010
  type: NodePort
