kubernetes/appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: smart-healthcare
spec:
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
      nodePort: 30001
  type: NodePort
