kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: smart-healthcare
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
