kubernetes/doctor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
  namespace: smart-healthcare
spec:
  selector:
    app: doctor-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
      nodePort: 30003
  type: NodePort
