kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: smart-healthcare
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30173
  type: NodePort
