kubernetes/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: smart-healthcare
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
      nodePort: 30004
  type: NodePort
