kubernetes/patient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: smart-healthcare
spec:
  selector:
    app: patient-service
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
      nodePort: 30005
  type: NodePort
