kubernetes/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: smart-healthcare
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
  type: ClusterIP
