kubernetes/telemedicine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemedicine-service
  namespace: smart-healthcare
spec:
  selector:
    app: telemedicine-service
  ports:
    - protocol: TCP
      port: 5007
      targetPort: 5007
      nodePort: 30007
  type: NodePort
